implemented logic to transform arrow function to cypher where

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ajv": "^6.2.1",
     "lodash": "^4.17.5",
     "neo4j-driver": "1.5.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "xregexp": "^4.1.1"
   }
 }
