--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-things": "^0.2.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^5.0.5"
   }
 }
