--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a json to cypher mapper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha"
   },
   "keywords": [
     "agensgraph",
@@ -31,6 +31,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
+    "lodash": "^4.17.5",
     "mocha": "^5.0.5"
   }
 }
