--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@flatten/array": "^1.1.4",
     "acorn": "^5.5.3",
     "ajv": "^6.2.1",
+    "bluebird": "^3.5.4",
     "neo4j-driver": "1.5.0",
     "pg": "^7.9.0",
     "uuid": "^3.2.1"
