--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bluebird": "^3.5.4",
     "neo4j-driver": "1.5.0",
     "pg": "^7.9.0",
+    "sql-from-mongo": "^0.2.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
