--- a/package.json
+++ b/package.json
@@ -16,27 +16,18 @@
   "author": "Diego de Oliveira",
   "license": "ISC",
   "dependencies": {
-    "@flatten/array": "^1.1.4",
-    "acorn": "^5.5.3",
-    "ajv": "^6.2.1",
     "bluebird": "^3.5.4",
-    "neo4j-driver": "1.5.0",
     "pg": "^7.9.0",
     "sql-from-mongo": "^0.2.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-things": "^0.2.0",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-mocha-only": "0.0.3",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "prettier-eslint": "^8.8.2",
-    "lodash": "^4.17.5",
-    "mocha": "^5.0.5"
+    "prettier-eslint": "^8.8.2"
   }
 }
