--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,14 @@
 {
-  "extends": "standard",
+  "extends": ["standard", "plugin:jest/recommended"],
   "rules": {
     "object-curly-spacing": ["error", "always"],
     "array-bracket-spacing": ["error", "always"]
   },
   "parserOptions": {
     "ecmaVersion": 2018
+  },
+  "plugins": ["jest"],
+  "env": {
+    "jest/globals": true
   }
 }
