--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "dependencies": {
     "@types/jest": "^24.0.11",
     "bluebird": "^3.5.4",
-    "mongo-parse": "^2.1.0",
     "pg": "^7.9.0",
-    "sql-from-mongo": "^0.2.1",
+    "sql-where-parser": "^2.2.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
