--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aghanim",
+  "name": "konekto",
   "version": "0.1.0",
   "description": "a json to cypher mapper",
   "main": "index.js",
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dodiego/aghanim"
+    "url": "https://github.com/dodiego/konekto"
   },
   "author": "Diego de Oliveira",
   "license": "ISC",
