--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "konekto",
   "version": "0.1.0",
   "description": "a json to cypher mapper",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "jest"
   },
