--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a json to cypher mapper",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "postversion": "git push && npm publish"
   },
   "keywords": [
     "agensgraph",
