--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@flatten/array": "^1.1.7",
     "bluebird": "^3.5.4",
+    "konekto": "^0.1.3",
     "pg": "^7.9.0",
     "sql-where-parser": "^2.2.1",
     "uuid": "^3.2.1"
