--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["standard", "plugin:jest/recommended"],
+  "extends": ["standard"],
   "rules": {
     "object-curly-spacing": ["error", "always"],
     "array-bracket-spacing": ["error", "always"]
