--- a/package.json
+++ b/package.json
@@ -24,21 +24,19 @@
   "dependencies": {
     "@flatten/array": "^1.1.7",
     "bluebird": "^3.5.4",
-    "konekto": "^0.1.3",
     "pg": "^7.9.0",
     "sql-where-parser": "^2.2.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
-    "eslint": "^4.0.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
+    "eslint": "^6.4.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^24.7.1",
-    "prettier-eslint": "^8.8.2"
+    "standard": "^14.3.1"
   }
 }
