--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "wkx": "^0.4.8"
   },
   "devDependencies": {
+    "typescript": "^3.6.4",
     "@types/jest": "^24.0.11",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
