--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@flatten/array": "^1.1.7",
     "pg": "^7.9.0",
     "sql-where-parser": "^2.2.1",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "wkx": "^0.4.8"
   },
   "devDependencies": {
+    "typescript": "^3.6.4",
     "@types/jest": "^24.0.11",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
