--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@flatten/array": "^1.1.7",
     "cypher-parser": "^0.1.4",
     "pg": "^7.9.0",
+    "pg-query-parser": "^0.2.4",
     "uuid": "^3.2.1",
     "wkx": "^0.4.8"
   },
