--- a/package.json
+++ b/package.json
@@ -22,15 +22,13 @@
   "author": "Diego de Oliveira",
   "license": "MIT",
   "dependencies": {
-    "@flatten/array": "^1.1.7",
     "cypher-parser": "^0.1.4",
     "pg": "^7.9.0",
     "pg-query-parser": "^0.2.4",
-    "uuid": "^3.2.1",
-    "wkx": "^0.4.8"
+    "prettier-eslint": "^9.0.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "typescript": "^3.6.4",
     "@types/jest": "^24.0.11",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
