--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  local-dir: path/to/mybook/book
+  local-dir: docs/book
   keep-history: false
   on:
     branch: master
