--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "license": "MIT",
   "dependencies": {
     "cypher-parser": "^0.1.4",
-    "pg": "^7.9.0",
-    "pg-query-parser": "^0.2.4",
     "prettier-eslint": "^9.0.1",
     "uuid": "^3.2.1"
+  },
+  "peerDependencies": {
+    "pg": "^7.9.0",
+    "pg-query-parser": "^0.2.4"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
