--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
   "license": "MIT",
   "dependencies": {
     "cypher-parser": "^0.1.4",
+    "pg-query-native": "^1.2.0",
     "prettier-eslint": "^9.0.1",
-    "uuid": "^3.2.1"
-  },
-  "peerDependencies": {
-    "pg": "^7.9.0",
-    "pg-query-parser": "^0.2.4"
+    "uuid": "^3.2.1",
+    "pg": "^7.9.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
