--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "license": "MIT",
   "dependencies": {
     "cypher-parser": "^0.1.4",
-    "pg-query-native": "^1.2.0",
     "prettier-eslint": "^9.0.1",
     "uuid": "^3.2.1",
     "pg": "^7.9.0"
+  },
+  "peerDependencies": {
+    "pg-query-native": "^1.2.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
