--- a/package.json
+++ b/package.json
@@ -27,9 +27,6 @@
     "uuid": "^3.2.1",
     "pg": "^7.9.0"
   },
-  "peerDependencies": {
-    "pg-query-native": "^1.2.0"
-  },
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "eslint": "^6.5.1",
@@ -39,6 +36,8 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.7.1"
+    "jest": "^24.7.1",
+    "pg-query-native": "^1.2.0",
+    "typescript": "^3.8.3"
   }
 }
