--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,8 @@
   "exclude": ["node_modules"],
   "compilerOptions": {
     "checkJs": true,
-    "resolveJsonModule": true
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "target": "ES2018"
   }
 }
