--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
   "author": "Diego de Oliveira",
   "license": "MIT",
   "dependencies": {
-    "cypher-parser": "^0.1.4",
+    "pg": "^7.9.0",
     "prettier-eslint": "^9.0.1",
-    "uuid": "^3.2.1",
-    "pg": "^7.9.0"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
@@ -36,7 +35,7 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.7.1",
+    "jest": "^25.1.0",
     "pg-query-native": "^1.2.0",
     "typescript": "^3.8.3"
   }
