--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "prettier-eslint": "^9.0.1",
     "uuid": "^3.2.1"
   },
+  "engines": {
+    "node" : ">=12.0.0"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "eslint": "^6.5.1",
