Add PostgreSQL + PostGIS

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,6 +15,12 @@ jobs:
         node-version: [12.x]
 
     steps:
+    - name: Setup PostgreSQL with Postgis
+      uses: huaxk/postgis-action@v1.0.0
+      with:
+        postgresql db: agens
+        postgresql user: agens
+        postgresql password: agens
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
