--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest",
     "postversion": "git push && npm publish",
-    "generate:types": "rm -rf typings && tsc"
+    "generate:types": "tsc"
   },
   "keywords": [
     "agensgraph",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.11",
     "@types/node": "^13.13.0",
+    "@types/pg": "^7.14.3",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.18.2",
