--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.15.0",
   "description": "a json to cypher mapper",
   "main": "lib/index.js",
-  "typings": "typings/lib/index.d.ts",
+  "typings": "lib/index.d.ts",
   "scripts": {
     "test": "jest",
     "postversion": "git push && npm publish",
@@ -24,14 +24,17 @@
   "author": "Diego de Oliveira",
   "license": "MIT",
   "dependencies": {
+    "@babel/preset-env": "^7.9.5",
     "pg": "^7.9.0",
     "prettier-eslint": "^9.0.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.9.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^13.13.0",
     "@types/pg": "^7.14.3",
+    "babel": "^6.23.0",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.18.2",
