--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "@babel/preset-env": "^7.9.5",
     "pg": "^7.9.0",
-    "prettier-eslint": "^9.0.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
@@ -34,16 +33,20 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^13.13.0",
     "@types/pg": "^7.14.3",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "babel": "^6.23.0",
-    "eslint": "^6.5.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.17.0",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.2.3",
     "pg-query-native": "^1.2.0",
+    "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   }
 }
