--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "module": "CommonJS",
     "resolveJsonModule": true,
     "declaration": true,
-    "outDir": "build",
+    "outDir": "dist",
+    "sourceRoot": "src",
     "target": "ES2018"
   }
 }
