--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
   "name": "konekto",
   "version": "0.17.11",
-  "description": "a json to cypher mapper",
-  "main": "build/lib/index.js",
-  "typings": "build/lib/index.d.ts",
+  "description": "a JSON to Graph Mapper that connects with Apache Age.",
   "scripts": {
-    "test": "jest --forceExit",
-    "postversion": "tsc && git push && npm publish",
-    "generate:types": "tsc"
+    "test": "jest"
   },
   "keywords": [
-    "agensgraph",
     "graph",
     "json",
     "mapper",
@@ -24,29 +19,20 @@
   "author": "Diego de Oliveira",
   "license": "MIT",
   "dependencies": {
-    "@babel/preset-env": "^7.9.5",
-    "pg": "^7.9.0",
-    "uuid": "^3.2.1"
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.9.0",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^13.13.0",
-    "@types/pg": "^7.14.3",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
-    "babel": "^6.23.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^25.2.3",
-    "pg-query-native": "^1.2.0",
-    "prettier": "^2.0.5",
-    "typescript": "^3.8.3"
+    "@babel/core": "^7.18.9",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.0.6",
+    "@types/pg": "^8.6.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   }
 }
