--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
     "@types/pg": "^8.6.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^28.1.3",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
