--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "pg": "^8.7.3",
     "uuid": "^8.3.2"
   },
+  "engines": {
+    "node" : ">=12.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-typescript": "^7.18.6",
